--- a/index.html
+++ b/index.html
@@ -12,5 +12,36 @@
         </div>
     <script src="./jsQR.js"></script>
     <script src="./script.js"></script>
+    <h2>Sample HTML Table</h2>
+
+  <!-- Table opening tag -->
+  <table border="1">
+    <!-- Table header row -->
+    <thead>
+      <tr>
+        <th>Header 1</th>
+        <th>Header 2</th>
+        <th>Header 3</th>
+      </tr>
+    </thead>
+    <!-- Table data rows -->
+    <tbody>
+      <tr>
+        <td>Row 1, Cell 1</td>
+        <td>Row 1, Cell 2</td>
+        <td>Row 1, Cell 3</td>
+      </tr>
+      <tr>
+        <td>Row 2, Cell 1</td>
+        <td>Row 2, Cell 2</td>
+        <td>Row 2, Cell 3</td>
+      </tr>
+      <tr>
+        <td>Row 3, Cell 1</td>
+        <td>Row 3, Cell 2</td>
+        <td>Row 3, Cell 3</td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 </html>
