--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        
+
+    <div id="wrapper">
+            <video id="video" autoplay muted playsinline></video>
+            <canvas id="camera-canvas"></canvas>
+            <canvas id="rect-canvas"></canvas>
+            <span id="qr-msg">QRコード: 見つかりません</span>
+        </div>
+    <script src="./jsQR.js"></script>
+    <script src="./script.js"></script>
     <h2>Sample HTML Table</h2>
 
   <!-- Table opening tag -->
