--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h2>Sample HTML Table</h2>
 
   <!-- Table opening tag -->
+    <span id="data-matrix">
   <table border="1">
     <!-- Table header row -->
     <thead>
@@ -44,5 +45,6 @@
       </tr>
     </tbody>
   </table>
+    </span>
 </body>
 </html>
