--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- Table opening tag -->
   <span id="data-matrix">
-  <table border="1">
+  <table id="my-table"border="1">
     <!-- Table header row -->
     <thead>
       <tr>
