--- a/index.html
+++ b/index.html
@@ -47,5 +47,16 @@
   </table>
   </span>
      <button onclick="addRow()">Add Row</button>
+    <script>
+        function addRow() {
+            var table = document.getElementById("myTable").getElementsByTagName('tbody')[0];
+            var newRow = table.insertRow(table.rows.length);
+            var cell1 = newRow.insertCell(0);
+            var cell2 = newRow.insertCell(1);
+            cell1.innerHTML = "New Name";
+            cell2.innerHTML = "New Age";
+        }
+    </script>
+
 </body>
 </html>
