--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
     <title>QRコードのテスト</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Row Example</title>
 </head>
 <body>
 
@@ -17,7 +19,7 @@
 
   <!-- Table opening tag -->
   <span id="data-matrix">
-  <table id="my-table"border="1">
+  <table id="my-table">
     <!-- Table header row -->
     <thead>
       <tr>
